Fix spacing issues in header on tablet (#970)
* Fix spacing issues in header on tablet

* Remove old px based margin as no longer required

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -488,6 +488,7 @@ h2.header {
   text-decoration: none;
   font-size: 16px;
   font-size: 1rem;
+  margin-right: 40px;
 }
 
 .navigation-logo:hover,
@@ -585,7 +586,7 @@ header nav {
 }
 
 header nav > ul > li > * {
-  margin-right: 50px;
+  margin-right: 2vw;
 }
 
 header nav > ul > li:last-child > * {
